# MyMixer

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  main.cpp
pipewire/: PipeWireContext.cpp  PipeWireContext.h  StreamFactory.h  VirtualChannel.cpp  VirtualChannel.h
util/: UtilString.cpp  UtilString.h
